# affiliate-program

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_08_27_1439-62e81cef8fdd_.py  2025_08_27_1536-b3207e42a2a7_.py  2025_08_28_1106-83d080321cea_.py  2025_08_28_1126-e6af02228286_.py  2025_08_28_1151-e9633a796559_.py
src/: config.py  constants.py  main.py
src/api/: include_handlers.py  include_routers.py
src/api/handlers/: start.py
src/api/routers/: admin.py  buyer.py  start.py
src/api/routers/admin/: admin.py  create_offer.py
src/api/routers/buyer/: buyer.py
src/database/models/: __init__.py  base.py  offer.py  user.py
src/repositories/: offer.py
src/repositories/base/: postgres.py
src/services/: offer.py  user.py
